--- a/src/assets/scss/components/_banner.scss
+++ b/src/assets/scss/components/_banner.scss
@@ -4,7 +4,7 @@
  }
  color: #575757;
  line-height: 1.2;
- margin-bottom: 24px;
+ margin-bottom: 0px;
  span {
    font-weight: 300;
  }
